--- a/style.css
+++ b/style.css
@@ -815,7 +815,7 @@ body {
   /* Image Styling */
   .faculty-card img {
     width: 100%;
-    height: 240px;
+    height: 200px;
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 15px;
@@ -1015,4 +1015,7 @@ body {
     box-shadow: 0 8px 20px rgba(255, 255, 255, 0.4);
   }
   
+  html {
+    scroll-behavior: smooth;
+  }
   
